# OTUSLesson31

./: .travis.yml  CMakeLists.txt  README.md  input_parser.cpp  input_parser.h  predictor.cpp  predictor.h  rcl_test_main.cpp  rclss_main.cpp  rclst_main.cpp  realty_types.h  test_realty.cpp  trainer.cpp  trainer.h
input_generator/: points_generator.py
output_visualizer/: plot_results.py
